# ai-enablement

./: .env.example  .gitignore  .mcp.json  .vercelignore  CLAUDE.md  PERFORMANCE-SCALING-DEBT.md  README.md  builder_server.py  hi  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.claude/: settings.json
api/: airtable_events.py  airtable_nps_webhook.py  airtable_sync_cron.py  calendly_events.py  clarity_sync_cron.py  client_meetings_sync_cron.py  close_events.py  close_users_sync_cron.py  cortana_sync_cron.py  cs_missed_recording_cron.py  ella_daily_digest_cron.py  ella_unanswered_flagger_cron.py  engagement_ping_cron.py  faq_digest_cron.py  fathom_backfill.py  fathom_events.py  ghl_events.py  ghl_sync_cron.py  landing_page_retag.py  meta_leads_sync_cron.py  meta_sheet_sync_cron.py  meta_sync_cron.py  oncehub_events.py  outbound_campaign_refresh.py  outbound_facts_refresh_cron.py  passive_ella_cron.py  sales_rep_candidates_sync_cron.py  setter_calls_sweep_cron.py  slack_events.py  teams_calendar_sync_cron.py  typeform_events.py  typeform_insights_cron.py  typeform_sync_cron.py  wistia_sync_cron.py
app/: globals.css  layout.tsx
components/: authenticated-shell.tsx  top-nav.tsx
docs/: claude-handoff.md  client-page-schema-spec.md  data-hygiene.md  followups.md  future-ideas.md  gregory-conventions.md  high-ticket-funnel-explained.md  known-issues.md  sales-dashboard-architecture.md  sales-sql-aggregation-plan.md  session-tracker.html  state.md
lib/: client-vocab.ts  mock-data.ts  promethean-vocab.ts
(+1060 files in other folders)
