[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-enablement"
version = "0.1.0"
description = "Internal AI enablement system — agents, ingestion, and shared utilities."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.68,<1.0",
    "supabase>=2.9,<3.0",
    "openai>=1.58,<2.0",
    "python-dotenv>=1.0,<2.0",
    # Deepgram SDK powers the setter-call transcription pipeline (see
    # ingestion/setter_calls/). URL-ingest only — we never store audio
    # locally; Deepgram fetches Close's pre-signed S3 URL directly.
    "deepgram-sdk>=3.7,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-mock>=3.14,<4.0",
    "black>=24.0,<26.0",
    "mcp[cli]>=1.2,<2.0",
    "ruff>=0.8,<1.0",
]
scripts = [
    "openpyxl>=3.1,<4.0",
    "pyairtable>=2.3,<4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"

[tool.black]
target-version = ["py311"]
